--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -224,6 +224,6 @@
         "link": "https://www.linkedin.com/in/rafael-antonio-hidalgo-romero-71608a116/"
       }
     ],
-    "aboutme": "Hola soy Rafael soy un apasionado al desarrollo backend y frontend, \nSoy experto en libreria para servicio rest api y me gusta el desarrollo frontend en React"
+    "aboutme": "Soy Rafael, un desarrollador full stack y consultor tecnológico con más de 7 años creando soluciones innovadoras para empresas internacionales. Me especializo en arquitecturas de microservicios, sistemas distribuidos y tecnologías cloud, habiendo trabajado con clientes como Millicom (TIGO), Copa Airlines y Rosen en proyectos de gran escala.\n\nMi pasión radica en transformar ideas complejas en sistemas robustos y escalables. Tengo experiencia liderando equipos de desarrollo, desde la conceptualización hasta la implementación, utilizando tecnologías como Node.js, Golang, React, Vue.js y plataformas AWS y Azure.\n\nDisfruto enfrentar desafíos técnicos que requieren soluciones creativas, especialmente en sistemas de alta concurrencia, APIs REST, y integraciones complejas. Mi objetivo es siempre entregar valor real a través de código limpio, arquitecturas sólidas y colaboración efectiva."
   }
 }
