[update] Revise education details and enhance descriptions in English and Spanish language files

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -69,9 +69,9 @@
     "educationitems": [
       {
         "work": "Computer Engineering",
-        "emp": "at Polytechnic University of Nicaragua",
-        "time": "March, 2014 - December, 2019",
-        "descrip": "is a professional capable of researching, analyzing, designing, building and evaluating computer systems that integrate hardware, software, and communications with digital devices and their interfaces with other devices and users, to satisfy the scientific, technological and functional needs of businesses and organizations in a national economy."
+        "emp": "Polytechnic University of Nicaragua",
+        "time": "March 2014 - December 2018",
+        "descrip": "Computer Engineering is an academic program that trains highly skilled professionals to design, develop, and maintain complex computational systems, integrating both hardware and software. During this degree, I developed competencies to apply innovative information technology across various business and scientific areas.\n\nAs a computer engineer, I acquired expertise in solving complex problems through technology and innovation, with a focus on distributed systems, software architectures, and digital device integration. The training included analysis, design, and evaluation of systems that meet the technological and functional needs of modern organizations, preparing me to lead large-scale technological projects."
       }
     ],
     "aboutmeitems": [
