--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -68,10 +68,10 @@
     ],
     "educationitems": [
       {
-        "work": "Ingenieria en Computacion",
-        "emp": "a Universidad Politecnica de Nicaragua",
-        "time": "Marzo,2014 - Diciembre,2019",
-        "descrip": "es un profesional capaz de investigar, analizar, diseñar, construir y evaluar sistemascomputacionales que integre hardware, software, y comunicaciones con dispositivos digitales y sus interfaces con otros dispositivos y usuarios, para satisfacer las necesidades científicas, tecnológicas y funcionales de los negocios y las organizaciones en una economía nacional. "
+        "work": "Ingeniería en Computación",
+        "emp": "Universidad Politécnica de Nicaragua",
+        "time": "Marzo 2014 - Diciembre 2018",
+        "descrip": "La Ingeniería en Computación es un programa académico que forma profesionales altamente capacitados para diseñar, desarrollar y mantener sistemas computacionales complejos, integrando tanto hardware como software. Durante esta carrera desarrollé competencias para aplicar tecnología informática innovadora en diversas áreas empresariales y científicas.\n\nComo ingeniero en computación, adquirí expertise en la resolución de problemas complejos a través de la tecnología y la innovación, con enfoque en sistemas distribuidos, arquitecturas de software, y la integración de dispositivos digitales. La formación incluyó análisis, diseño y evaluación de sistemas que satisfacen necesidades tecnológicas y funcionales de organizaciones modernas, preparándome para liderar proyectos tecnológicos de gran escala."
       }
     ],
     "aboutmeitems": [
