--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -96,125 +96,9 @@
         "val": "001-180496-0013A"
       }
     ],
-    "lib_skills": [
-      {
-        "title": "React(JS)",
-        "val": 60
-      },
-      {
-        "title": "NodeJS",
-        "val": 80
-      },
-      {
-        "title": "NestJS",
-        "val": 80
-      },
-      {
-        "title": "Grahql(JS,GO)",
-        "val": 40
-      },
-      {
-        "title": "Boostrap(Css)",
-        "val": 70
-      },
-      {
-        "title": "NodeJS(JS)",
-        "val": 90
-      },
-      {
-        "title": "GORM(GO)",
-        "val": 80
-      },
-      {
-        "title": "Flutter(Dart)",
-        "val": 80
-      },
-      {
-        "title": "Asp .net MVC(C#)",
-        "val": 60
-      },
-      {
-        "title": "Git",
-        "val": 90
-      },
-      {
-        "title": "Docker,Docker Compose",
-        "val": 80
-      },
-      {
-        "title": "Aws",
-        "val": 50
-      },
-      {
-        "title": "Heroku",
-        "val": 75
-      },
-      {
-        "title": "Oracle",
-        "val": 90
-      },
-      {
-        "title": "PostgreSQL",
-        "val": 90
-      }
-    ],
-    "language_skills": [
-      {
-        "title": "Javascript",
-        "val": 90
-      },
-      {
-        "title": "Typescript",
-        "val": 90
-      },
-      {
-        "title": "Golang",
-        "val": 100
-      },
-      {
-        "title": "C#",
-        "val": 60
-      },
-      {
-        "title": "COBOL",
-        "val": 70
-      },
-      {
-        "title": "PYTHON",
-        "val": 80
-      },
-      {
-        "title": "Pro C",
-        "val": 70
-      },
-      {
-        "title": "PL/SQL",
-        "val": 90
-      },
-      {
-        "title": "CSS",
-        "val": 40
-      },
-      {
-        "title": "HTML",
-        "val": 60
-      },
-      {
-        "title": "Kotlin",
-        "val": 50
-      },
-      {
-        "title": "Dart",
-        "val": 60
-      },
-      {
-        "title": "Visual Basic",
-        "val": 50
-      }
-    ],
     "social": [
       {
-        "name": "Githud",
+        "name": "GitHub",
         "icon": "fab fa-github",
         "link": "https://github.com/rafael180496"
       },
